<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_overlay">

    <LinearLayout
        android:id="@+id/frame_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/nome_da_disciplina"
            android:inputType="textCapSentences|textAutoCorrect"
            android:textColor="@color/white"
            android:textColorHint="@color/white_overlay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="4dp"
            android:paddingTop="10dp"
            android:text="@string/lbl_horario"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/frame_container_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/item_horario" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_green"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:headerBackground="@null" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <Button
                android:id="@+id/btn_picker_cancelar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/btn_red"
                android:text="@string/lbl_cancelar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_picker_ok"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_green"
                android:text="@string/lbl_ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/frame_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_red"
            android:text="@string/lbl_cancelar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_green"
            android:text="@string/lbl_ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>